css/vidkraftr.webflow.css
/* ... */
.blog-post1-content_tag-item {
  background-color: var(--base-color-neutral--neutral-lightest\<deleted\|relume-variable-color-neutral-3\>);
  padding: .25rem .5rem;
  font-size: .875rem;
  font-weight: 600;
  text-decoration: none;
}

.blog-post1-content_tag-item.w--current {
  border-bottom: 2px solid var(--base-color-neutral--black);
}

.blog-post1-content_divider {
  background-color: var(--_primitives---colors--neutral-lightest);
  width: 100%;
  max-width: 48rem;
  height: 1px;
  margin-top: 3rem;
  margin-bottom: 3rem;
}

.blog-post1-content_author-wrapper {
  align-items: center;
  display: flex;
}

.blog-post1-content_author-image-wrapper {
  margin-right: 1rem;
}

.blog-post1-content_author-image {
  object-fit: cover;
  border-radius: 100%;
  width: 3.5rem;
  min-width: 3.5rem;
  height: 3.5rem;
  min-height: 3.5rem;
}

.section_blog-post1-cta {
  position: relative;
}

.blog-post1-cta_form {
  max-width: 30rem;
  margin-bottom: 0;
  margin-left: auto;
  margin-right: auto;
}

.blog-post1-related_component {
  flex-direction: column;
  align-items: center;
}

.blog-post1-related_list {
  grid-column-gap: 2rem;
  grid-row-gap: 4rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-auto-columns: 1fr;
  display: grid;
}

.blog-post1-related_item {
  background-color: var(--_primitives---colors--white);
  border-radius: 1rem;
  padding: 1rem;
}

.blog-post1-related_image-link {
  width: 100%;
  margin-bottom: 1.5rem;
}

.blog-post1-related_image-wrapper {
  width: 100%;
  overflow: hidden;
}

.blog-post1-related_image {
  aspect-ratio: 3 / 2;
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.blog-post1-related_category-link {
  margin-bottom: .5rem;
  margin-right: 1rem;
  font-size: .875rem;
  font-weight: 600;
  text-decoration: none;
}

.blog-post1-related_category-link.w--current {
  border-bottom: 2px solid var(--base-color-neutral--black);
}

.blog-post1_title-link {
  margin-bottom: .5rem;
  text-decoration: none;
  display: block;
}

.navbar_button-holder {
  display: flex;
}

.body {
  background-color: var(--_primitives---colors--tan-hide-lightest);
}

.section_header15 {
  background-image: url('../images/VidKraftr-BG.png'), linear-gradient(180deg, var(--_primitives---colors--flamingo-lighter), white);
  color: var(--color-scheme-1--text);
  background-position: 0 0, 0 0;
  background-size: cover, auto;
  border-radius: 1rem;
  margin: 1.5rem 2rem;
}

.header15_content-wrapper {
  grid-column-gap: 5rem;
  grid-row-gap: 4rem;
  grid-template-rows: auto;
  grid-template-columns: 1.75fr 1fr;
  grid-auto-columns: 1fr;
  align-items: start;
  display: grid;
}

.header15_content-left {
  -webkit-text-fill-color: inherit;
  background-clip: border-box;
}

.header15_content-right.align-left {
  flex-flow: column;
  justify-content: center;
  align-items: flex-end;
  display: flex;
}

.header15_image-wrapper {
  width: 100%;
  overflow: hidden;
}

.header15_image {
  aspect-ratio: 16 / 9;
  object-fit: cover;
  border-top-left-radius: .5rem;
  border-top-right-radius: .5rem;
  width: 100%;
  height: 100%;
}

.heading {
  letter-spacing: -1.5px;
  font-weight: 500;
  line-height: 110%;
}

.paragraph {
  color: var(--_primitives---colors--neutral-dark);
  letter-spacing: -.25px;
  line-height: 150%;
}

.list, .list-2 {
  color: var(--_primitives---colors--neutral-dark);
}

.navbar14_component {
  color: var(--color-scheme-1--text);
  background-color: #ddd0;
  align-items: center;
  margin-top: 2.5rem;
  margin-left: 5%;
  margin-right: 5%;
  display: flex;
  position: fixed;
  inset: 0% 0% auto;
}

.navbar14_component.delete-this-class {
  display: block;
  position: relative;
}

.navbar-on-page {
  flex-direction: column;
  align-items: center;
  display: flex;
}

.navbar14_container {
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  border: 1px solid var(--_primitives---colors--neutral-lighter);
  background-color: var(--_primitives---colors--white);
  border-radius: 1rem;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: 80rem;
  height: auto;
  min-height: 4.5rem;
  margin-left: auto;
  margin-right: auto;
  padding-left: 2rem;
  padding-right: 2rem;
  display: flex;
  box-shadow: 0 2px 20px -5px #2327282e;
}

.navbar14_logo-link {
  padding-left: 0;
}

.navbar14_menu {
  align-items: center;
  display: flex;
  position: static;
}

.navbar14_menu-link-wrapper {
  display: flex;
}

.navbar14_link {
  padding: .5rem 1rem;
  font-weight: 500;
}

.navbar14_link.w--current {
  color: var(--_primitives---colors--flamingo-darker);
  font-weight: 500;
}

.navbar14_dropdown-toggle {
  grid-column-gap: .5rem;
  align-items: center;
  padding: .5rem 1rem;
  display: flex;
}

.navbar14_dropdown-list.w--open {
  border: var(--_ui-styles---stroke--border-width) solid var(--color-scheme-1--border);
  border-radius: var(--_ui-styles---radius--small);
  background-color: var(--color-scheme-1--background);
  padding: .5rem;
  position: absolute;
}

.navbar14_dropdown-link {
  padding: .5rem 1rem;
}

.navbar14_dropdown-link.w--current {
  color: var(--_primitives---colors--neutral-darkest);
}

.navbar14_button-wrapper {
  grid-column-gap: 1rem;
  justify-content: center;
  align-items: center;
  margin-left: 2rem;
  display: flex;
}

.navbar14_menu-button {
  padding: 0;
}

.navbar-instructions-delete {
  background-color: var(--_primitives---colors--neutral-lightest);
  color: var(--_primitives---colors--neutral-darkest);
  text-align: left;
  width: 100%;
  padding: 2rem;
}

.navbar-instructions-item {
  padding-left: .5rem;
}

.navbar1_component {
  border-bottom: 1px solid var(--border-color--border-primary\<deleted\|relume-variable-border-color-1\>);
  background-color: var(--base-color-neutral--white\<deleted\|relume-variable-color-neutral-2\>);
  align-items: center;
  width: 100%;
  height: auto;
  min-height: 4.5rem;
  padding-left: 5%;
  padding-right: 5%;
  display: flex;
}
/* ... */

